src/app/widgets/Console/index.styl
/*
 * Copyright (C) 2021 Sienci Labs Inc.
 *
 * This file is part of gSender.
 *
 * gSender is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, under version 3 of the License.
 *
 * gSender is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with gSender.  If not, see <https://www.gnu.org/licenses/>.
 *
 * Contact for information regarding this program and its license
 * can be sent through gSender@sienci.com or mailed to the main office
 * of Sienci Labs Inc. in Waterloo, Ontario, Canada.
 *
 */

.widget-content {
    position: relative;

    &.hidden {
        display: none;
    }
}

.no-serial-connection {
    padding: 10px;
    color: #333;
    opacity: .65;
}

.terminal-container {
    background: #000;
    overflow-y: hidden;
    width: 100%;
    padding: 0 5px;
    min-height: 180px;
}

.icon {
    display: inline-block;
    width: 14px;
    height: 14px;
    vertical-align: middle;
    margin: 0 2px 2px 2px;

    &.select-all {
        background: url("./images/select-all.svg") no-repeat 0 0;
    }
}

.terminal-content {
    height: 100% !important;
    padding: 0 !important;
    display: flex;
}

